# enervigiledge

./: .gitignore  README.md  app_config.py  config.db  config.db-shm  config.db-wal  main.py  pyproject.toml
analytics/: system.py
controller/: conversion.py  device.py  enums.py  exceptions.py  manager.py  meter.py  meter_calculation.py  meter_nodes.py  meter_validation.py  node.py  parsing.py  registry.py  types.py
controller/meter/: calculation.py  device.py  extraction.py  meter.py  nodes.py  validation.py
controller/meter/protocol/modbus_rtu/: rtu_device.py
controller/meter/protocol/opcua/: opcua_device.py
controller/node/: node.py
controller/node/processor/: bool_processor.py  float_processor.py  int_processor.py  numeric_processor.py  processor.py  string_processor.py
controller/registry/: node_type.py  protocol.py
controller/types/: device.py  general.py  node.py
data/: nodes.py
db/: db.py  timedb.py
db/device_img/: .gitkeep
influxdb-data/data/_internal/monitor/1/: fields.idx
influxdb-data/meta/: meta.db
influxdb-data/wal/_internal/monitor/1/: _00001.wal
meter_models/: meters.py
model/: date.py  db.py
model/analytics/: system.py
model/controller/: device.py  general.py  node.py
model/controller/protocol/: modbus_rtu.py  no_protocol.py  opcua.py
model/struct/: sliding_window.py
mqtt/: client.py  client_options.env
old/: test.py
protocol/modbus_rtu/: rtu_device.py
protocol/opcua/: opcua_device.py
tests/: test_meter.py  test_nodes.py  test_nodes_api.py  test_protocol_registry.py  test_registry.py  test_types_registry.py  test_web.py
util/: debug.py  functions.py  functions_generic.py  functions_images.py  functions_objects.py
util/functions/: auth.py  calculation.py  date.py  generic.py  images.py  meter.py  objects.py  performance.py  web.py
web/: api_decorator.py  auth_api.py  dependencies.py  device_api.py  exceptions.py  login_api.py  nodes_api.py  safety.py  server.py  validation.py
web/api/: analytics.py  auth.py  decorator.py  device.py  nodes.py  perfomance.py
web/parsers/: device.py  helpers.py  nodes.py
web/parsers/protocol/: modbus_rtu.py  no_protocol.py  opc_ua.py
