[tool.black]
line-length = 150        
skip-string-normalization = true
target-version = ['py311']

[project]
name = "enervigiledge"
version = "0.1.0"
description = "Open-source application to monitor and log data from energy devices using multiple protocols."
authors = [
    { name = "Enervigiledge Contributors" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "aiomqtt",
    "pyjwt",
    "passlib",
    "pillow",
    "cryptography",
    "colorama"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]

[project.scripts]
enervigiledge = "main:async_main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
