[tool.black]
line-length = 125       

[project]
name = "enervigiledge"
version = "0.1.0"
description = "Open-source application to monitor and log data from energy devices using multiple protocols."
authors = [
    { name = "Enervigiledge Contributors" }
]
dependencies = [
    "aiosqlite",
    "influxdb",
    "colorama",
    "python-dotenv",
    "aiomqtt",
    "cryptography",
    "fastapi",
    "pymodbus",
    "pyserial",
    "asyncua",
    "uvicorn",
    "PyJWT",
    "argon2-cffi",
    "Pillow",
    "arrow",
    "tzdata",
    "python-multipart",
    "psutil",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]

[project.scripts]
enervigiledge = "main:async_main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "db",
    "web",
    "mqtt",
    "model",
    "analytics",
    "controller",
    "meter_models"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
